--- a/ckanext/feedback/templates/management/comments.html
+++ b/ckanext/feedback/templates/management/comments.html
@@ -107,16 +107,20 @@
               {% block result_resource_comments_table %}
                 <h4 class="bottom-centered-content" id="data-count">
                   {{ _('Results: ') }}
-                  <span id="resource-comments-results-count">0</span>
+                  <span id="resource-comments-results-count">{{ resource_comments|length }}</span>
                 </h4>
+                <span class="bottom-centered-content right-text">
+                  <button class="btn btn-primary" type="button" onclick="runBulkAction('/management/approve_bulk_resource_comments')">{{ _('Bulk Appproval')}}</button>
+                  <button class="btn btn-primary" type="button" onclick="runBulkAction('/management/delete_bulk_resource_comments')">{{ _('Bulk Delete')}}</button>
+                </span>
                 <table class="table table-striped table-bordered table-condensed table-toggle-more bottom-centered-content" id="resource-comments-table">
                   <thead class="table-header">
                     <tr>
                       <th class="small-column">
-                        <input type="checkbox" id="comments-checkbox" name="comments-checkbox" />
+                        <input type="checkbox" id="resource-comments-checkbox-all" name="resource-comments-checkbox-all" />
                       </th>
                       <th class="big-column">{{ _('Comments Body') }}</th>
-                      <th class="medium-column">{{ _('Score') }}</th>
+                      <th class="medium-column">{{ _('Rating') }}</th>
                       <th class="medium-column">{{ _('Dataset') }}</th>
                       <th class="medium-column">{{ _('Resource') }}</th>
                       <th class="small-column">{{ _('Category') }}</th>
@@ -127,6 +131,34 @@
                     </tr>
                   </thead>
                   <tbody>
+                    {% for row in resource_comments %}
+                      <tr>
+                        <td class="small-column">
+                          <input type="checkbox" id="resource-comments-checkbox-{{ row.id }}" name="resource-comments-checkbox" value="{{ row.id }}" />
+                        </td>
+                        <td class="left-aligned-text">
+                          <a href="{{ h.url_for('resource_comment.comment', resource_id=row.resource_id) }}">{{ row.content }}</a>
+                        </td>
+                        <td>
+                          {{ row.rating }}
+                        </td>
+                        <td>
+                          <a href="{{ url_for('dataset.search') }}{{ row.resource.package.title }}">{{ row.resource.package.title }}</a>
+                        </td>
+                        <td>
+                          <a href="{{ h.url_for('dataset.search') }}{{ row.resource.package.title }}/resource/{{ row.resource.id }}">{{ row.resource.name }}</a>
+                        </td>
+                        <td>{{ row.category.value }}</td>
+                        <td>{{ row.created.strftime('%Y/%m/%d') }}</td>
+                        {% if c.userobj.sysadmin %}
+                          {% if row.approval == True %}
+                            <td data-approval="true">{{ _('Approved') }}</td>
+                          {% else %}
+                            <td data-waiting="true">{{ _('Waiting') }}</td>
+                          {% endif %}
+                        {% endif %}
+                      </tr>
+                    {% endfor %}
                   </tbody>
                 </table>
               {% endblock %}
