--- a/ckanext/feedback/templates/management/comments.html
+++ b/ckanext/feedback/templates/management/comments.html
@@ -41,8 +41,10 @@
       {% if c.userobj.sysadmin %}
         <form id="comments-form" method="post">
           <div class="tab">
-            <input id="menu1" type="radio" name="tab-menu" value="utilization-comments" onclick="refreshTable()" checked><label class="tab-menu" for="menu1">{{ _('Utilization Commnets') }}</label>
-            <input id="menu2" type="radio" name="tab-menu" value="resource-comments" onclick="refreshTable()"><label class="tab-menu" for="menu2">{{ _('Resource Comments') }}</label>
+            <input id="menu1" type="radio" name="tab-menu" value="utilization-comments" onclick="refreshTable()" {% if tab == 'utilization-comments' %}checked{% endif %}>
+            <label class="tab-menu" for="menu1">{{ _('Utilization Commnets') }}</label>
+            <input id="menu2" type="radio" name="tab-menu" value="resource-comments" onclick="refreshTable()" {% if tab == 'resource-comments' %}checked{% endif %}>
+            <label class="tab-menu" for="menu2">{{ _('Resource Comments') }}</label>
             <div class="tab-contents" id="menu1">
               {% block result_utilization_comments_table %}
                 <h4 class="bottom-centered-content" id="data-count">
