--- a/ckanext/feedback/templates/utilization/search.html
+++ b/ckanext/feedback/templates/utilization/search.html
@@ -2,173 +2,97 @@
 
   {% extends "page.html" %}
 
-  {%- block page -%}
+  {% block styles %}
+    {{ super() }}
+    {% asset 'feedback/feedback-search-css' %}
+  {% endblock %}
 
-    <!-- {% block skip %}
-      <div class="sr-only sr-only-focusable"><a href="#content">{{ _('Skip to content') }}</a></div>
-    {% endblock %} -->
+  {% block breadcrumb_content %}
+    {{ super() }}
+    <li class="active"><a href="{{ h.url_for('utilization.search') }}">{{ _('Utilization') }}</a></li>
+  {% endblock %}
 
-    {#
-    Override the header on a page by page basis by extending this block. If
-    making sitewide header changes it is preferable to override the header.html
-    file.
-    #}
-    {%- block header %}
-      {% include "header.html" %}
-    {% endblock -%}
-
-    {% block styles %}
-      {{ super() }}
-      {% asset 'feedback/feedback-search-css' %}
-    {% endblock %}
-
-    {# The content block allows you to replace the content of the page if needed #}
-    {%- block content %}
-      {% block maintag %}<div class="main">{% endblock %}
-        <div id="content" class="container">
-          {% block main_content %}
-
-            {% block toolbar %}
-              <div class="toolbar" role="navigation" aria-label="{{ _('Breadcrumb') }}">
-                {% block breadcrumb %}
-                  {% if self.breadcrumb_content() | trim %}
-                    <ol class="breadcrumb">
-                      {% snippet 'snippets/home_breadcrumb_item.html' %}
-                      {% block breadcrumb_content %}
-                        {{ super() }}
-                        <li class="active"><a href="{{ h.url_for('utilization.search') }}">{{ _('Utilization') }}</a></li>
-                      {% endblock %}
-                    </ol>
-                  {% endif %}
-                {% endblock %}
-              </div>
-            {% endblock %}
-
-            <div class="row wrapper{% block wrapper_class %}{% endblock %}{% if self.secondary()|trim == '' or c.action=='resource_read' %} no-nav{% endif %}">
-
-              {#
-              The pre_primary block can be used to add content to before the
-              rendering of the main content columns of the page.
-              #}
-              {% block pre_primary %}
-              {% endblock %}
-
-              {% block secondary %}
-
-              {% endblock %}
-
-              {% block primary %}
-                <form class="top-centered-content" method="get">
-                  {% block search_by_keyword %}
-                    <br>
-                    {% if not disable_keyword %}
-                      <h4>{{ _('Keyword Search') }}</h4>
-                      <div class="input-group search-input-group">
-                        <input id="field-giant-search" type="text" class="form-control input-lg" name="keyword" placeholder="{{ _('Keyword Search...') }}" aria-label="{{ _('Search utilization data') }}" autocomplete="off" value="{{ keyword }}"/>
-                        <span class="input-group-btn">
-                          <button class="btn btn-default btn-lg" type="submit" aria-label="{{ _('Submit') }}"><i class="fa fa-search"></i></button>
-                        </span>
-                      </div>
+  {% block primary %}
+    <form class="top-centered-content" method="get">
+      {% block search_by_keyword %}
+        <br>
+        {% if not disable_keyword %}
+          <h4>{{ _('Keyword Search') }}</h4>
+          <div class="input-group search-input-group">
+            <input id="field-giant-search" type="text" class="form-control input-lg" name="keyword" placeholder="{{ _('Keyword Search...') }}" aria-label="{{ _('Search utilization data') }}" autocomplete="off" value="{{ keyword }}"/>
+            <span class="input-group-btn">
+              <button class="btn btn-default btn-lg" type="submit" aria-label="{{ _('Submit') }}"><i class="fa fa-search"></i></button>
+            </span>
+          </div>
+        {% endif %}
+      {% endblock %}
+      {% if c.userobj.sysadmin %}
+        {% block select_status %}
+          <span><h4>{{ _('Status') }}</h4>
+          <input type="checkbox" id="waiting" name="waiting" onclick="refreshTable()" checked>
+          <label for="waiting" class="normal-font-weight middle-vertical-aligned">{{ _('Unapproved') }}</label>
+          <input class="spaced-left" type="checkbox" id="approval" name="approval" onclick="refreshTable()" checked>
+          <label for="approval" class="normal-font-weight middle-vertical-aligned">{{ _('Approved') }}</label>
+          </span>
+        {% endblock %}
+      {% endif %}
+    </form>
+    {% if not disable_keyword or c.userobj.sysadmin %}
+      <hr>
+    {% endif %}
+    {% block result_table %}
+      <h4 class="bottom-centered-content" id="data-count">
+        {{ _('Results: ') }}
+        <span id="utilization-results-count">{{ utilizations|length }}</span>
+      </h4>
+      <table class="table table-striped table-bordered table-condensed table-toggle-more bottom-centered-content" id="results-table">
+        <thead class="table-header">
+          <tr>
+            <th class="big-column">{{ _('Title') }}</th>
+            <th class="small-column">{{ _('Issue resolutions') }}</th>
+            <th class="big-column">{{ _('Dataset') }}</th>
+            <th class="medium-column">{{ _('Data resource') }}</th>
+            <th class="small-column">{{ _('Registration date') }}</th>
+            {% if c.userobj.sysadmin %}
+              <th class="small-column">{{ _('Status') }}</th>
+            {% endif %}
+          </tr>
+        </thead>
+        <tbody>
+          {% for row in utilizations %}
+            <tr>
+              <td class="left-aligned-text"><a href="{{ h.url_for('utilization.details', utilization_id=row.id) }}">{{ row.title }}</a></td>
+              <td>
+                <div class="division-flex-outer">
+                  <div class="division-flex-inner-icon">
+                    {% if row.issue_resolution > 0 %}
+                      <img src="/images/issue_resolution_badge.png" alt="issue resolution badge" width="28" height="28"/>
                     {% endif %}
-                  {% endblock %}
-                  {% if c.userobj.sysadmin %}
-                    {% block select_status %}
-                      <span><h4>{{ _('Status') }}</h4>
-                      <input type="checkbox" id="waiting" name="waiting" onclick="refreshTable()" checked>
-                      <label for="waiting" class="normal-font-weight middle-vertical-aligned">{{ _('Unapproved') }}</label>
-                      <input class="spaced-left" type="checkbox" id="approval" name="approval" onclick="refreshTable()" checked>
-                      <label for="approval" class="normal-font-weight middle-vertical-aligned">{{ _('Approved') }}</label>
-                      </span>
-                    {% endblock %}
-                  {% endif %}
-                </form>
-                {% if not disable_keyword or c.userobj.sysadmin %}
-                  <hr>
+                  </div>
+                  <div class="division-flex-inner-num">{{ row.issue_resolution }}</div>
+                </div>
+              </td>
+              <td>{{ row.package_name }}</td>
+              <td>{{ row.resource_name }}</td>
+              <td>{{ row.created.strftime('%Y/%m/%d') }}</td>
+              {% if c.userobj.sysadmin %}
+                {% if row.approval == True %}
+                  <td data-approval="true">{{ _('Approved') }}</td>
+                {% else %}
+                  <td data-waiting="true">{{ _('Unapproved') }}</td>
                 {% endif %}
-                {% block result_table %}
-                  <h4 class="bottom-centered-content" id="data-count">
-                    {{ _('Results: ') }}
-                    <span id="utilization-results-count">{{ utilizations|length }}</span>
-                  </h4>
-                  <table class="table table-striped table-bordered table-condensed table-toggle-more bottom-centered-content" id="results-table">
-                    <thead class="table-header">
-                      <tr>
-                        <th class="big-column">{{ _('Title') }}</th>
-                        <th class="small-column">{{ _('Issue resolutions') }}</th>
-                        <th class="big-column">{{ _('Dataset') }}</th>
-                        <th class="medium-column">{{ _('Data resource') }}</th>
-                        <th class="small-column">{{ _('Registration date') }}</th>
-                        {% if c.userobj.sysadmin %}
-                          <th class="small-column">{{ _('Status') }}</th>
-                        {% endif %}
-                      </tr>
-                    </thead>
-                    <tbody>
-                      {% for row in utilizations %}
-                        <tr>
-                          <td class="left-aligned-text"><a href="{{ h.url_for('utilization.details', utilization_id=row.id) }}">{{ row.title }}</a></td>
-                          <td>
-                            <div class="division-flex-outer">
-                              <div class="division-flex-inner-icon">
-                                {% if row.issue_resolution > 0 %}
-                                  <img src="/images/issue_resolution_badge.png" alt="issue resolution badge" width="28" height="28"/>
-                                {% endif %}
-                              </div>
-                              <div class="division-flex-inner-num">{{ row.issue_resolution }}</div>
-                            </div>
-                          </td>
-                          <td>{{ row.package_name }}</td>
-                          <td>{{ row.resource_name }}</td>
-                          <td>{{ row.created.strftime('%Y/%m/%d') }}</td>
-                          {% if c.userobj.sysadmin %}
-                            {% if row.approval == True %}
-                              <td data-approval="true">{{ _('Approved') }}</td>
-                            {% else %}
-                              <td data-waiting="true">{{ _('Unapproved') }}</td>
-                            {% endif %}
-                          {% endif %}
-                        </tr>
-                      {% endfor %}
-                    </tbody>
-                  </table>
-                {% endblock %}
-              {% endblock %}
-              {#
-              The primary_content block can be used to add content to the page.
-              This is the main block that is likely to be used within a template.
+              {% endif %}
+            </tr>
+          {% endfor %}
+        </tbody>
+      </table>
+    {% endblock %}
+  {% endblock %}
 
-              Example:
-
-                {% block primary_content %}
-                  <h1>My page content</h1>
-                  <p>Some content for the page</p>
-                {% endblock %}
-              #}
-              {% block primary_content %}
-              {% endblock %}
-            </div>
-          {% endblock %}
-        </div>
-      </div>
-    {% endblock -%}
-
-    {#
-    Override the footer on a page by page basis by extending this block. If
-    making sitewide header changes it is preferable to override the footer.html-u
-    file.
-    #}
-    {%- block footer %}
-      {% include "footer.html" %}
-    {% endblock -%}
-  {%- endblock -%}
+  {% block secondary %}{% endblock %}
 
   {%- block scripts %}
-    {% asset 'base/main' %}
-    {% asset 'base/ckan' %}
-    {% asset 'feedback/feedback-search-js' %}
-    {% if g.tracking_enabled %}
-      {% asset 'base/tracking' %}
-    {% endif %}
     {{ super() }}
+    {% asset 'feedback/feedback-search-js' %}
   {% endblock -%}
 {% endif %}
