--- a/ckanext/feedback/templates/utilization/new.html
+++ b/ckanext/feedback/templates/utilization/new.html
@@ -1,10 +1,12 @@
 {% if h.is_enabled_utilizations() %}
 
-  {% extends "page.html" %}
+  {% extends "package/base.html" %}
+
+  {% block breadcrumb_content_selected %} class="inactive"{% endblock %}
 
   {% block breadcrumb_content %}
-    <li class="inactive"><a href="{{ h.url_for('dataset.read', id=resource_details.package_name) }}">{{ _('Dataset') }}</a></li>
-    <li class="inactive"><a href="{{ h.url_for('resource.read', id=resource_details.package_name, resource_id=resource_details.resource_id) }}">{{ _('Resource') }}</a></li>
+    {{ super() }}
+    <li class="inactive"><a href="{{ h.url_for('dataset.search') }}{{ pkg_dict.name }}/resource/{{ resource.id }}">{{ resource.name|truncate(30) }}</a></li>
     <li class="active"><a href="">{{ _('Create utilization application') }}</a></li>
   {% endblock %}
 
@@ -12,15 +14,15 @@
     <article class="module" role="main">
       <div class="module-content">
         <h4>{{ _('Dataset') }}</h4>
-        <a href="{{ h.url_for('dataset.read', id=resource_details.package_name) }}">{{ resource_details.package_name }}</a>
+        <a href="{{ h.url_for('dataset.read', id=pkg_dict.name) }}">{{ pkg_dict.name }}</a>
         <hr>
         <h4>{{ _('Resource') }}</h4>
-        <a href="{{ h.url_for('resource.read', id=resource_details.package_name, resource_id=resource_details.resource_id) }}">{{ resource_details.resource_name }}</a>
+        <a href="{{ h.url_for('resource.read', id=pkg_dict.name, resource_id=resource.id) }}">{{ resource.name }}</a>
         <hr>
         <form name="content_form" action="{{ url_for('utilization.create') }}" method="post">
           <input type="hidden" id="return_to_resource" name="return_to_resource" value="{{ return_to_resource }}">
-          <input type="hidden" id="package_name" name="package_name" value="{{ resource_details.package_name }}">
-          <input type="hidden" id="resource_id" name="resource_id" value="{{ resource_details.resource_id }}">
+          <input type="hidden" id="package_name" name="package_name" value="{{ pkg_dict.name }}">
+          <input type="hidden" id="resource_id" name="resource_id" value="{{ resource.id }}">
           <h4>{{ _('Title') }}</h4>
           <input type="text" class="form-control" id="title" name="title"/>
           <div>
