--- a/ckanext/feedback/templates/header.html
+++ b/ckanext/feedback/templates/header.html
@@ -94,7 +94,7 @@
             {% if h.is_enabled_utilizations() %}
               {% do menu_items.append(('utilization.search', _('Utilization'))) %}
             {% endif %}
-            {% if c.userobj.sysadmin and h.is_enabled_resources %}
+            {% if c.userobj.sysadmin %}
               {% do menu_items.append(('management.comments', _('Management Comments'))) %}
             {% endif %}
             {% do menu_items.append(('home.about', _('About'))) %}
